# doctor-booking-api

./: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_doctorprofile_is_verified_and_more.py  0003_alter_user_managers.py  0004_alter_user_managers.py
appointments/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
appointments/migrations/: 0001_initial.py
core/: exceptions.py  settings.py  urls.py  views.py
tests/: base.py  book_appointment.py  cancel_appointment.py  doctor_create_availability.py  doctor_dashboard.py  list_doctor_slots.py  login.py  medical_history.py  my_appointments.py  negative_tests.py  register_users.py  run_all.py  test_integration_flow.py  test_production_api_flow.py  update_appointment_status.py
